--- a/build-tools/tooling-api/build.gradle
+++ b/build-tools/tooling-api/build.gradle
@@ -28,6 +28,12 @@ java {
 dependencies {
     implementation project (path: ':build-tools:logger')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    
+    testImplementation tests.junit
+    testImplementation tests.google_truth
+    
+    api google.gson
+    api 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0'
 }
 
 repositories {
