--- a/build-tools/tooling-api-impl/build.gradle
+++ b/build-tools/tooling-api-impl/build.gradle
@@ -59,7 +59,8 @@ dependencies {
     implementation project (path: ':build-tools:tooling-api-model')
     
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'org.gradle:gradle-tooling-api:7.3.3'
+    implementation 'org.gradle:gradle-tooling-api:7.4.2'
+    implementation 'com.android.tools.build:builder-model:7.1.3'
     
     testImplementation tests.junit
     testImplementation tests.google_truth
