--- a/build-tools/tooling-api-impl/src/test/test-home/.androidide/init/init.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-home/.androidide/init/init.gradle
@@ -2,7 +2,7 @@ import com.itsaky.androidide.tooling.plugin.AndroidIDEToolingApiPlugin
 
 initscript {
     dependencies {
-        classpath files ("D:/Projects/AndroidStudioProjects/AndroidIDE/build-tools/tooling-api-impl/./src/test/test-home/.androidide/init/model.jar", "D:/Projects/AndroidStudioProjects/AndroidIDE/build-tools/tooling-api-impl/./src/test/test-home/.androidide/init/plugin.jar")
+        classpath files ("D:/Projects/AndroidStudioProjects/AndroidIDE/build-tools/tooling-api-impl/./src/test/test-home/.androidide/init/model.jar")
     }
 }
 
