--- a/.github/workflows/android_workflow.yml
+++ b/.github/workflows/android_workflow.yml
@@ -1,55 +1,27 @@
-name: Android CI
+name: Android Tests CI
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ javac-17 ]
   pull_request:
-    branches: [ main ]
+    branches: [ javac-17 ]
 
 jobs:
   build:
-    name: Build APK
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.5.0
-        with:
-          access_token: ${{ github.token }}
+    - uses: actions/checkout@v2
+    - name: set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: gradle
 
-      - name: Clone repo
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
-      - name: Build debug apk
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: :app:clean :app:build
-          distributions-cache-enabled: true
-          dependencies-cache-enabled: true
-          configuration-cache-enabled: true
-
-      - name: Generate translation report
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: :app:checkTranslations
-          distributions-cache-enabled: true
-          dependencies-cache-enabled: true
-          configuration-cache-enabled: true
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v2
-        if: ${{ !github.head_ref }}
-        with:
-          name: apk-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
-
-      - name: Upload translation report
-        uses: actions/upload-artifact@v2
-        if: ${{ !github.head_ref }}
-        with:
-          name: translation-report
-          path: build/translation-reports/
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew test
