--- a/build-tools/tooling-api-model/build.gradle
+++ b/build-tools/tooling-api-model/build.gradle
@@ -21,9 +21,21 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
+
+repositories {
+    maven {
+        url 'https://repo.gradle.org/gradle/libs-releases/'
+    }
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'com.android.tools.build:builder-model:7.1.3'
+}
+
 task copyToTestDir (type: Copy) {
     from "$project.buildDir.absolutePath/libs/tooling-api-model.jar"
     into "${project.rootProject.findProject (":build-tools:tooling-api-impl").file ("src/test/test-home/.androidide/init").absolutePath}/"
@@ -41,9 +53,4 @@ project.tasks.jar {
     outputs.upToDateWhen {
         false
     }
-}
-
-
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
