--- a/build-tools/tooling-api-model/build.gradle
+++ b/build-tools/tooling-api-model/build.gradle
@@ -33,7 +33,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'com.android.tools.build:builder-model:7.1.3'
+    api 'com.android.tools.build:builder-model:7.1.3'
 }
 
 task copyToTestDir (type: Copy) {
