Added JSONRpc as module

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':build-tools:logger'
 include ':build-tools:tooling-api'
 include ':build-tools:tooling-api-impl'
 include ':build-tools:tooling-api-model'
+include ':build-tools:jsonrpc'
