--- a/build-tools/tooling-api/build.gradle
+++ b/build-tools/tooling-api/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation project (path: ':build-tools:tooling-api-model')
     
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    api 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0'
+    api project (path: ':build-tools:jsonrpc')
     
     testImplementation tests.junit
     testImplementation tests.google_truth
