--- a/build-tools/tooling-api-impl/build.gradle
+++ b/build-tools/tooling-api-impl/build.gradle
@@ -54,6 +54,7 @@ repositories {
 }
 
 dependencies {
+    implementation project (path: ':build-tools:jsonrpc')
     implementation project (path: ':build-tools:logger')
     implementation project (path: ':build-tools:tooling-api')
     implementation project (path: ':build-tools:tooling-api-model')
