--- a/build-tools/xml/build.gradle
+++ b/build-tools/xml/build.gradle
@@ -20,8 +20,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility rootProject.ext.javaSourceVersion
+    targetCompatibility rootProject.ext.javaTargetVersion
 }
 
 dependencies {
