Renamed ':build-tools:xml' to ':build-tools:xml-formatter'

--- a/lsp/xml/build.gradle
+++ b/lsp/xml/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation common.utilcode
 
     implementation project(':lsp:api')
-	implementation project(':build-tools:xml')
+    implementation project (':build-tools:xml-formatter')
     
     compileOnly project(':lexers')
     compileOnly project(':common')
