--- a/settings.gradle
+++ b/settings.gradle
@@ -24,4 +24,4 @@ include ':build-tools:logger'
 include ':build-tools:tooling-api'
 include ':build-tools:tooling-api-impl'
 include ':build-tools:tooling-api-model'
-include ':build-tools:xml'
+include ':build-tools:xml-formatter'
