--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':build-tools:tooling-api'
 include ':build-tools:tooling-api-impl'
 include ':build-tools:tooling-api-model'
 include ':build-tools:xml-formatter'
+include ':build-tools:builder-api'
