--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,60 +4,60 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion rootProject.ext.compileSdk
     buildToolsVersion rootProject.ext.buildTools
-
+    
     defaultConfig {
         applicationId rootProject.ext.packageName
         minSdkVersion rootProject.ext.minSdk
         targetSdkVersion rootProject.ext.targetSdk
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-
+        
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
-
+    
     compileOptions {
         coreLibraryDesugaringEnabled true
         sourceCompatibility rootProject.ext.javaSourceVersion
         targetCompatibility rootProject.ext.javaTargetVersion
     }
-
+    
     kotlinOptions {
         jvmTarget = "11"
     }
-
-
+    
+    
     buildFeatures {
         viewBinding true
     }
-
+    
     signingConfigs {
-
+        
         debug {
-            storeFile file("dev.keystore")
+            storeFile file ("dev.keystore")
             keyAlias "androidide"
             storePassword "ed68424fb109e5aa8146e4b86caa72e3"
             keyPassword "ed68424fb109e5aa8146e4b86caa72e3"
         }
-
+        
         release {
-            storeFile file("dev.keystore")
+            storeFile file ("dev.keystore")
             keyAlias "androidide"
             storePassword "ed68424fb109e5aa8146e4b86caa72e3"
             keyPassword "ed68424fb109e5aa8146e4b86caa72e3"
         }
     }
-
+    
     buildTypes {
         debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile ('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile ('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
     }
@@ -66,7 +66,7 @@ android {
             excludes += ['META-INF/eclipse.inf', 'about_files/LICENSE-2.0.txt', 'plugin.xml', 'plugin.properties', 'about.mappings', 'about.properties', 'about.ini', 'modeling32.png']
         }
     }
-
+    
     lint {
         abortOnError false
         disable 'VectorPath', 'NestedWeights', 'ContentDescription', 'SmallSp'
@@ -74,10 +74,10 @@ android {
 }
 
 dependencies {
-
+    
     // Annotation processors
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.1'
-
+    
     implementation common.editor
     implementation common.utilcode
     implementation common.file_picker
@@ -87,9 +87,9 @@ dependencies {
     implementation common.xml2json
     implementation google.gson
     implementation google.guava
-
+    
     implementation common.jsoup
-
+    
     // AndroidX
     implementation androidx.annotation
     implementation androidx.appcompat
@@ -103,24 +103,28 @@ dependencies {
     implementation androidx.vectors
     implementation androidx.animated_vectors
     implementation google.material
-
+    
     // Kotlin
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    
     // Local projects here
-    implementation project(':treeview')
-    implementation project(':emulatorview')
-    implementation project(':xml-inflater')
-    implementation project(':lexers')
-    implementation project(':common')
-    implementation project(':actions')
-
-    implementation project(':lsp:api')
-    implementation project(':lsp:java')
-    implementation project(':lsp:xml')
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation project (':treeview')
+    implementation project (':emulatorview')
+    implementation project (':xml-inflater')
+    implementation project (':lexers')
+    implementation project (':common')
+    implementation project (':actions')
+    
+    implementation project (':lsp:api')
+    implementation project (':lsp:java')
+    implementation project (':lsp:xml')
+    
+    implementation fileTree (dir: 'libs', include: ['*.jar'])
+    
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    
+    // This is to build the tooling-api-impl project before the app is built
+    // So we always copy the latest JAR file to assets
+    compileOnly project (path: ':build-tools:tooling-api-impl')
 }
