--- a/build-tools/tooling-api/build.gradle
+++ b/build-tools/tooling-api/build.gradle
@@ -27,14 +27,14 @@ java {
 
 dependencies {
     implementation project (path: ':build-tools:logger')
-    implementation project (path: ':build-tools:tooling-api-model')
+    api project (path: ':build-tools:tooling-api-model')
     
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0"
     
     testImplementation tests.junit
     testImplementation tests.google_truth
     
+    api "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0"
     api google.gson
 }
 
