Added support for resolving dependencies of java library projects

--- a/build-tools/tooling-api-impl/src/test/test-project/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-    	build_gradle_version = '7.0.2'
+    	build_gradle_version = '7.2.0-rc01'
     }
     
     project.ext {
