--- a/build-tools/tooling-api-impl/src/test/test-project/java-library/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/java-library/build.gradle
@@ -1,10 +1,16 @@
 plugins {
 	id 'java-library'
+    id 'idea'
 }
 
 java {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
+}
+
+dependencies {
+    implementation 'io.github.itsaky:nb-javac-android:17.0.0.0'
+    compileOnly 'com.google.android.material:material:1.5.0'
 }
 
 repositories {
