--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':build-tools:tooling-api-model'
 include ':build-tools:xml-formatter'
 include ':build-tools:builder-api'
 include ':build-tools:builder-model'
+include ':build-tools:project'
