--- a/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation project (path: ':java-library')
+    implementation project (path: ':android-library')
 }
 
