--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,13 @@ subprojects {
 }
 
 allprojects {
+    
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            freeCompilerArgs += '-Xjvm-default=all'
+        }
+    }
+    
     repositories {
         google()
         mavenLocal()
