Generate sources on XML file change

--- a/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
@@ -20,13 +20,17 @@ android {
     }
     
     compileOptions {
-		sourceCompatibility JavaVersion.VERSION_1_8
-		targetCompatibility JavaVersion.VERSION_1_8
+		sourceCompatibility JavaVersion.VERSION_11
+		targetCompatibility JavaVersion.VERSION_11
 	}
 	
 	lintOptions {
 	    abortOnError false
 	}
+    
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
