Added Tooling API event classes

--- a/build-tools/tooling-api-impl/build.gradle
+++ b/build-tools/tooling-api-impl/build.gradle
@@ -56,6 +56,7 @@ repositories {
 dependencies {
     implementation project (path: ':build-tools:logger')
     implementation project (path: ':build-tools:tooling-api')
+    implementation project (path: ':build-tools:tooling-api-events')
     implementation project (path: ':build-tools:tooling-api-model')
     
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
