--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,7 @@ include ':build-tools:javac'
 include ':build-tools:jsonrpc'
 include ':build-tools:logger'
 include ':build-tools:tooling-api'
+include ':build-tools:tooling-api-events'
 include ':build-tools:tooling-api-impl'
 include ':build-tools:tooling-api-model'
 include ':build-tools:xml-formatter'
