Registered type adapters for event objects

--- a/build-tools/tooling-api/build.gradle
+++ b/build-tools/tooling-api/build.gradle
@@ -28,6 +28,7 @@ java {
 dependencies {
     implementation project (path: ':build-tools:logger')
     api project (path: ':build-tools:tooling-api-model')
+    api project (path: ':build-tools:tooling-api-events')
     
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     
