--- a/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
@@ -33,6 +33,10 @@ android {
     }
 }
 
+task thisIsATestTask () {
+    println "This is a test task"
+}
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.3.1'
