--- a/settings.gradle
+++ b/settings.gradle
@@ -24,4 +24,5 @@ include ':build-tools:tooling-api'
 include ':build-tools:tooling-api-events'
 include ':build-tools:tooling-api-impl'
 include ':build-tools:tooling-api-model'
+include ':build-tools:xml-dom'
 include ':build-tools:xml-formatter'
