--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -13,7 +13,8 @@ ext {
             xml2json: 'com.github.smart-fun:XmlToJson:1.5.1',
             jsoup: 'org.jsoup:jsoup:1.14.2',
             antlr4: 'org.antlr:antlr4-runtime:4.9.2',
-            javaparser: 'com.github.javaparser:javaparser-symbol-solver-core:3.24.2'
+            javaparser: 'com.github.javaparser:javaparser-symbol-solver-core:3.24.2',
+            jsonrpc: 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0'
     ]
 
     androidx = [
