Added package name field in IdeAndroidModule

--- a/build-tools/tooling-api-model/build.gradle
+++ b/build-tools/tooling-api-model/build.gradle
@@ -33,6 +33,8 @@ repositories {
 
 dependencies {
     implementation project (path: ':build-tools:logger')
+    implementation project (path: ':build-tools:xml-dom')
+    
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     api "com.android.tools.build:builder-model:${project.property ("androidide.tooling.supportedAgpVersion")}"
 }
