--- a/build-tools/xml-dom/build.gradle
+++ b/build-tools/xml-dom/build.gradle
@@ -26,7 +26,17 @@ java {
 }
 
 dependencies {
-    api files ('libs/org.eclipse.lemminx-0.21.0-uber.jar')
+    api files ('libs/org.eclipse.lemminx-0.21.0.jar')
+    api "org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0"
+    
+    implementation common.jsonrpc
+    implementation "com.google.guava:guava:31.1-jre"
+    implementation "com.google.code.gson:gson:2.8.9"
+    implementation "xerces:xercesImpl:2.12.2"
+    implementation "xml-apis:xml-apis:1.4.01"
+    implementation "com.kotcrab.remark:remark:1.0.0"
+    implementation "org.jsoup:jsoup:1.14.2"
+    implementation "xml-resolver:xml-resolver:1.2"
 }
 
 repositories {
