--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':build-tools:tooling-api-impl'
 include ':build-tools:tooling-api-model'
 include ':build-tools:xml-dom'
 include ':build-tools:xml-formatter'
+include ':build-tools:fuzzysearch'
