--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,9 @@ dependencies {
     
     implementation fileTree (dir: 'libs', include: ['*.jar'])
     
+    // LeakCanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
+    
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     
     // This is to build the tooling-api-impl project before the app is built
