--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':build-tools:xml-dom'
 include ':build-tools:xml-formatter'
 include ':build-tools:fuzzysearch'
 include ':build-tools:builder-model-impl'
+include ':build-tools:jsonrpc'
