--- a/build-tools/tooling-api-model/build.gradle
+++ b/build-tools/tooling-api-model/build.gradle
@@ -32,6 +32,7 @@ repositories {
 
 dependencies {
     implementation project (path: ':build-tools:logger')
+    implementation project (path: ':build-tools:jsonrpc')
     implementation project (path: ':build-tools:xml-dom')
     api project (path: ':build-tools:builder-model-impl')
     
