--- a/build-tools/xml-dom/build.gradle
+++ b/build-tools/xml-dom/build.gradle
@@ -27,7 +27,11 @@ java {
 
 dependencies {
     api files ('libs/org.eclipse.lemminx-0.21.0.jar')
-    api "org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0"
+    api ("org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0") {
+        exclude group: 'org.eclipse.lsp4j', module: 'org.eclipse.lsp4j.jsonrpc'
+    }
+    
+    implementation project (path: ':build-tools:jsonrpc')
     
     implementation "com.google.guava:guava:31.1-jre"
     implementation "com.google.code.gson:gson:2.8.9"
