Updated the supported AGP version to v7.2.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
 android.enableJetifier=true
-androidide.tooling.supportedAgpVersion=7.2.0-rc02
+androidide.tooling.supportedAgpVersion=7.2.0
