Upgraded Android Gradle Plugin to version  7.0.2 for AndroidIDE project

--- a/lsp/api/build.gradle
+++ b/lsp/api/build.gradle
@@ -36,6 +36,7 @@ android {
         sourceCompatibility rootProject.ext.javaSourceVersion
         targetCompatibility rootProject.ext.javaTargetVersion
     }
+    namespace 'com.itsaky.api'
 }
 
 dependencies {
