--- a/lsp/testing/build.gradle
+++ b/lsp/testing/build.gradle
@@ -37,6 +37,7 @@ android {
         sourceCompatibility rootProject.ext.javaSourceVersion
         targetCompatibility rootProject.ext.javaTargetVersion
     }
+    namespace 'com.itsaky.lsp.testing'
 }
 
 dependencies {
