--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ android {
         abortOnError false
         disable 'VectorPath', 'NestedWeights', 'ContentDescription', 'SmallSp'
     }
+    namespace 'com.itsaky.androidide'
 }
 
 dependencies {
