--- a/emulatorview/build.gradle
+++ b/emulatorview/build.gradle
@@ -19,6 +19,7 @@ android {
         sourceCompatibility rootProject.ext.javaSourceVersion
         targetCompatibility rootProject.ext.javaTargetVersion
     }
+    namespace 'com.itsaky.terminal.view'
 }
 
 dependencies {
