--- a/lsp/api/src/main/AndroidManifest.xml
+++ b/lsp/api/src/main/AndroidManifest.xml
@@ -16,6 +16,6 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest package="com.itsaky.api">
+<manifest>
 
 </manifest>
