--- a/lsp/xml/src/main/AndroidManifest.xml
+++ b/lsp/xml/src/main/AndroidManifest.xml
@@ -15,4 +15,4 @@
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<manifest package="com.itsaky.lsp.xml"/>
+<manifest />
