--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,13 @@
 *.class
 
 # Generated files
-bin/
-gen/
-out/
+/bin/
+/gen/
+/out/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # Gradle files
 .gradle/
-./build/
-./build/translation-reports
+/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
