--- a/.github/workflows/android_workflow.yml
+++ b/.github/workflows/android_workflow.yml
@@ -22,12 +22,20 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 11 # DO NOT CHANGE. Project must be built with JDK 11.
 
-      - name: Build debug apk
+      - name: Build project
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: :app:clean :app:build
+          arguments: clean build
+          distributions-cache-enabled: true
+          dependencies-cache-enabled: true
+          configuration-cache-enabled: true
+
+      - name: Run tests
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: test
           distributions-cache-enabled: true
           dependencies-cache-enabled: true
           configuration-cache-enabled: true
