--- a/build-tools/tooling-api-impl/src/test/test-project/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-    	build_gradle_version = '7.2.0'
+    	build_gradle_version = '7.4.0-alpha05'
     }
     
     project.ext {
@@ -14,10 +14,6 @@ buildscript {
     }
     
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public/' }
-        maven { url 'https://maven.aliyun.com/repository/google/' }
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
-        maven { url "https://clojars.org/repo/" }
         google()
         mavenLocal()
         mavenCentral()
@@ -29,10 +25,6 @@ buildscript {
 }
 allprojects {
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public/' } 
-        maven { url 'https://maven.aliyun.com/repository/google/' }
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
-        maven { url "https://clojars.org/repo/" }
         mavenLocal()
         mavenCentral()
         google()
