--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,4 @@ include ':build-tools:xml-formatter'
 include ':build-tools:fuzzysearch'
 include ':build-tools:builder-model-impl'
 include ':build-tools:jsonrpc'
+include ':build-tools:projects'
