On-demand additional edits computation for Class completion items

--- a/lsp/api/build.gradle
+++ b/lsp/api/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation androidx.appcompat
     implementation androidx.ktx
     implementation common.kotlin
+    implementation common.utilcode
     implementation google.material
     
     api project (':build-tools:tooling-api-model')
