Implemented the new Projects API in ProjectManager

--- a/lsp/api/build.gradle
+++ b/lsp/api/build.gradle
@@ -53,8 +53,7 @@ dependencies {
     implementation common.utilcode
     implementation google.material
     
-    api project (':build-tools:tooling-api-model')
-    
+    compileOnly project (':build-tools:projects')
     compileOnly project (':xml-inflater')
     compileOnly project (':actions')
     compileOnly project (':common')
