Added the EventBus library

--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,5 @@ include ':build-tools:fuzzysearch'
 include ':build-tools:builder-model-impl'
 include ':build-tools:jsonrpc'
 include ':build-tools:projects'
+include ':build-tools:eventbus'
+include ':build-tools:eventbus-android'
