Implemented basic file events with the EventsAPI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     
     // Local projects here
     implementation project (':build-tools:eventbus-android')
+    implementation project (':build-tools:eventbus-events')
     implementation project (':build-tools:projects')
     implementation project (':build-tools:tooling-api')
     implementation project (':treeview')
