--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,4 @@ include ':build-tools:jsonrpc'
 include ':build-tools:projects'
 include ':build-tools:eventbus'
 include ':build-tools:eventbus-android'
+include ':build-tools:eventbus-events'
