Created ClassTrie to manage classes of a module

--- a/build-tools/eventbus-events/build.gradle
+++ b/build-tools/eventbus-events/build.gradle
@@ -26,6 +26,8 @@ java {
 
 dependencies {
     implementation common.jkotlin
+    
+    api project (path: ':build-tools:eventbus')
 }
 
 compileKotlin {
