--- a/build-tools/tooling-api-impl/src/test/test-project/android-library/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/android-library/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation 'io.github.itsaky:nb-javac-android:17.0.0.0'
+    api project (path: ':java-library')
 }
 
 repositories {
