--- a/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'unresolved:unresolved:unresolved'
-    implementation project (path: ':java-library')
-    implementation project (path: ':android-library')
+    implementation project (path: ':another-android-library')
+//    implementation project (path: ':android-library')
 }
 
