--- a/build-tools/tooling-api-impl/src/test/test-project/java-library/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/java-library/build.gradle
@@ -9,7 +9,7 @@ java {
 
 dependencies {
     implementation 'io.github.itsaky:nb-javac-android:17.0.0.0'
-    implementation project(path: ':another-java-library')
+    api project(path: ':another-java-library')
 }
 
 repositories {
