--- a/build-tools/tooling-api-impl/src/test/test-project/settings.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/settings.gradle
@@ -1,5 +1,7 @@
 include ':app'
 include ':java-library'
 include ':android-library'
+include ':other-java-library'
 include ':another-java-library'
+include ':another-android-library'
 rootProject.name = "TestApp"
