--- a/build-tools/tooling-api-impl/build.gradle
+++ b/build-tools/tooling-api-impl/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation project (path: ':build-tools:tooling-api')
     
     implementation common.jkotlin
-    implementation 'org.gradle:gradle-tooling-api:7.4.2'
+    implementation 'org.gradle:gradle-tooling-api:7.5-rc-3'
     
     testImplementation tests.junit
     testImplementation tests.google_truth
