Include project path with JavaModuleProjectDependency Handle the case when there are multiple java project dependencies with same project name but with different path

--- a/build-tools/tooling-api-impl/src/test/test-project/java-library/build.gradle
+++ b/build-tools/tooling-api-impl/src/test/test-project/java-library/build.gradle
@@ -8,8 +8,10 @@ java {
 }
 
 dependencies {
-    implementation 'io.github.itsaky:nb-javac-android:17.0.0.0'
+    api 'io.github.itsaky:nb-javac-android:17.0.0.0'
     api project(path: ':another-java-library')
+    api project(path: ':java-library:nested-java-library')
+    api project(path: ':another-java-library:nested-java-library')
 }
 
 repositories {
