--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,4 @@ include ':build-tools:projects'
 include ':build-tools:eventbus'
 include ':build-tools:eventbus-android'
 include ':build-tools:eventbus-events'
+include ':build-tools:tooling-api-testing'
