--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,4 @@ include ':build-tools:eventbus'
 include ':build-tools:eventbus-android'
 include ':build-tools:eventbus-events'
 include ':build-tools:tooling-api-testing'
+include ':build-tools:javac-services'
