--- a/build-tools/javac-services/build.gradle
+++ b/build-tools/javac-services/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     implementation common.kotlin
+    implementation common.utilcode
     implementation project (':common')
     implementation project(path: ':build-tools:logger')
     
