--- a/lsp/java/src/main/AndroidManifest.xml
+++ b/lsp/java/src/main/AndroidManifest.xml
@@ -14,6 +14,6 @@
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<manifest package="com.itsaky.lsp.java">
+<manifest package="com.itsaky.androidide.lsp.java">
 
 </manifest>
