--- a/common/build.gradle
+++ b/common/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation fileTree (dir: 'libs', include: ['*.jar'])
     implementation common.utilcode
     implementation common.lang3
+    implementation google.guava
     implementation google.material
     
     implementation androidx.appcompat
