--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,6 +1,6 @@
 ext {
     androidide = [
-            javac: 'io.github.itsaky:nb-javac-android:17.0.0.2'
+            javac: 'io.github.itsaky:nb-javac-android:17.0.0.3-SNAPSHOT'
     ]
     
     common = [
