--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -16,6 +16,7 @@ ext {
             javaparser : 'com.github.javaparser:javaparser-symbol-solver-core:3.24.2',
             jsonrpc    : 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0',
             lang3      : 'org.apache.commons:commons-lang3:3.12.0',
+            io         : 'commons-io:commons-io:2.11.0',
             kotlin     : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.0',
             jkotlin    : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     ]
