Added 'Publish unit test results' action

--- a/.github/workflows/android_workflow.yml
+++ b/.github/workflows/android_workflow.yml
@@ -48,6 +48,12 @@ jobs:
           dependencies-cache-enabled: true
           configuration-cache-enabled: true
 
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: "test-results/**/*.xml"
+
       - name: Upload APK
         uses: actions/upload-artifact@v3
         if: ${{ !github.head_ref }}
