--- a/build-tools/projects/build.gradle
+++ b/build-tools/projects/build.gradle
@@ -26,6 +26,12 @@ android {
             minifyEnabled true
         }
     }
+    
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
