--- a/build-tools/google-java-format/build.gradle
+++ b/build-tools/google-java-format/build.gradle
@@ -26,8 +26,9 @@ java {
 
 dependencies {
     implementation google.guava_jre
-    implementation 'com.google.auto.value:auto-value-annotations:1.9'
-    annotationProcessor 'com.google.auto.value:auto-value:1.9'
+    implementation google.auto_val_annotations
+    
+    annotationProcessor google.auto_val_ap
     
     implementation project (path: ':build-tools:javac')
 }
