--- a/build-tools/xml-dom/build.gradle
+++ b/build-tools/xml-dom/build.gradle
@@ -26,19 +26,20 @@ java {
 
 dependencies {
     api files ('libs/org.eclipse.lemminx-0.21.0.jar')
-    api ("org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0") {
+    
+    api (xml.lsp4j) {
         exclude group: 'org.eclipse.lsp4j', module: 'org.eclipse.lsp4j.jsonrpc'
     }
     
     implementation project (path: ':build-tools:jsonrpc')
     
-    implementation "com.google.guava:guava:31.1-jre"
-    implementation "com.google.code.gson:gson:2.8.9"
-    implementation "xerces:xercesImpl:2.12.2"
-    implementation "xml-apis:xml-apis:1.4.01"
-    implementation "com.kotcrab.remark:remark:1.0.0"
-    implementation "org.jsoup:jsoup:1.14.2"
-    implementation "xml-resolver:xml-resolver:1.2"
+    implementation common.jsoup
+    implementation google.guava_jre
+    implementation google.gson
+    implementation xml.xercesImpl
+    implementation xml.apis
+    implementation xml.remark
+    implementation xml.resolver
 }
 
 repositories {
