--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,7 +23,8 @@ ext {
             lang3      : 'org.apache.commons:commons-lang3:3.12.0',
             io         : 'commons-io:commons-io:2.11.0',
             kotlin     : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.0',
-            jkotlin    : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+            jkotlin    : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8',
+            eventbus_ap: 'org.greenrobot:eventbus-annotation-processor:3.3.1'
     ]
     
     androidx = [
