--- a/build-tools/projects/build.gradle
+++ b/build-tools/projects/build.gradle
@@ -34,7 +34,16 @@ android {
     }
 }
 
+kapt {
+    arguments {
+        arg ('eventBusIndex', 'com.itsaky.androidide.events.ProjectsApiEventsIndex')
+    }
+}
+
 dependencies {
+    
+    kapt common.eventbus_ap
+    
     api project (path: ':build-tools:eventbus')
     api project (path: ':build-tools:eventbus-events')
     api project (path: ':build-tools:tooling-api')
