--- a/lsp/api/build.gradle
+++ b/lsp/api/build.gradle
@@ -43,6 +43,12 @@ android {
     }
 }
 
+kapt {
+    arguments {
+        arg ('eventBusIndex', 'com.itsaky.androidide.events.LspApiEventsIndex')
+    }
+}
+
 dependencies {
     implementation common.editor
     implementation project (':build-tools:fuzzysearch')
